--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1108,7 +1108,7 @@
                           <div data-bind="if: $root.requestForStatementModel.showInviteSection" id="invite-statement-givers-section">
                             <div data-bind="with: $root.requestForStatementModel">
 
-                                <h2 data-bind="ltext: 'application-choose-statement-givers'"></h2>
+                                <p id="choose-statement-givers-title" data-bind="ltext: 'application-choose-statement-givers'"></p>
 
                                 <table class="table table-striped" data-test-id="table-application-statements-givers">
                                     <tbody data-bind="foreach: data()">
