--- a/resources/private/attachment/attachment.html
+++ b/resources/private/attachment/attachment.html
@@ -173,7 +173,11 @@
                            data-bind="checked: isVerdictAttachment, enable: $root.authorization.ok('set-attachments-as-verdict-attachment')"/>
                   </div>
                   <div class="col2 attachment-info-field">
-                    <input type="checkbox"class="form-input" data-bind="checked: visibility"/>
+                    <select data-test-id="attachment-visibility" class="form-input"
+                            data-bind="options: attachmentVisibilities,
+                                       optionsText: function(i) { return loc('attachment.visibility.' + i)},
+                                       value: visibility,
+                                       enable: $root.authorization.ok('set-attachment-visibility') && editable"/>
                   </div>
 
                   <div data-bind="if: features.enabled('arkistointi') && latestVersion">
