query bulletin comments

--- a/resources/private/ui-components/bulletin/bulletin-tab/bulletin-tab-template.html
+++ b/resources/private/ui-components/bulletin/bulletin-tab/bulletin-tab-template.html
@@ -20,6 +20,7 @@
   <!-- ko if: showVersionComments -->
   <div class="bulletin-component" data-bind="component: {name: 'bulletin-comments',
                                                          params: {showVersionComments: showVersionComments,
-                                                                  bulletin: bulletin}}"></div>
+                                                                  bulletin: bulletin,
+                                                                  comments: comments}}"></div>
   <!-- /ko -->
 </script>
