--- a/resources/private/create/map-popup.html
+++ b/resources/private/create/map-popup.html
@@ -3,7 +3,6 @@
 <body>
 
   <section class="page container" id="map-popup-content">
-
      <div class="map-select-info">
        <h3 data-bind="ltext: 'newRequest.chosenLocation'"></h3>
        <p data-bind="lhtml: 'create.search-check-prompt'"></p>
@@ -18,26 +17,22 @@
 
          <div class="form-entry">
            <label class="form-label" data-bind="ltext: 'newRequest.address'"></label>
-           <input data-bind="textInput: addressString, css: {'ui-autocomplete-loading' : searching}"
+           <input data-bind="textInput: address, css: {'ui-autocomplete-loading' : processing}"
                   data-test-id="create-address" type="text" class="form-input text"/>
          </div>
 
          <div >
            <label class="form-label" data-bind="ltext: 'newRequest.municipality'"></label>
-           <span data-bind="text: municipalityName, attr: {'data-test-value': municipalityCode}, css: {'ui-autocomplete-loading' : searching}"
+           <span data-bind="text: municipalityName, attr: {'data-test-value': municipalityCode}, css: {'ui-autocomplete-loading' : processing}"
                  data-test-id="create-municipality-select"></span>
          </div>
 
-
-
-         <!-- ko if: !municipalitySupported() -->
-         <div>
+         <div data-bind="if: !municipalitySupported()">
             <p class="error"
                data-bind="ltext: 'municipality.unknown'">
             </p>
           </div>
-         <!-- /ko -->
-         <button data-bind="enable: addressOk() && propertyIdOk() && municipalitySupported(), click: goPhase2"
+         <button data-bind="enable: addressOk() && propertyIdOk() && municipalitySupported(), click: proceed"
                  class="positive"
                  data-test-id="create-continue" id="create-location-continue">
            <span data-bind="ltext: 'continue'"></span>
@@ -45,7 +40,6 @@
          </button>
        </div>
      </div>
-
   </section>
 
 </body>
