--- a/resources/private/create/map-popup.html
+++ b/resources/private/create/map-popup.html
@@ -10,6 +10,7 @@
        <div>
          <div class="form-entry">
            <label class="form-label" data-bind="ltext: 'newRequest.propertyId'"></label>
+           <img alt="" src="/img/ajax-loader-16.gif" data-bind="visible: processing">
            <input data-bind="textInput: propertyIdHumanReadable"
                   data-test-id="create-property-id" type="text" readonly="readonly"
                   class="form-input text bottom-marginM">
@@ -17,14 +18,15 @@
 
          <div class="form-entry">
            <label class="form-label" data-bind="ltext: 'newRequest.address'"></label>
-           <input data-bind="textInput: address, css: {'ui-autocomplete-loading' : processing}"
+           <input data-bind="textInput: address, css: {'ui-autocomplete-loading' : processingAddress}"
                   data-test-id="create-address" type="text" class="form-input text"/>
          </div>
 
          <div >
            <label class="form-label" data-bind="ltext: 'newRequest.municipality'"></label>
-           <span data-bind="text: municipalityName, attr: {'data-test-value': municipalityCode}, css: {'ui-autocomplete-loading' : processing}"
+           <span data-bind="text: municipalityName, attr: {'data-test-value': municipalityCode}"
                  data-test-id="create-municipality-select"></span>
+           <img alt="" src="/img/ajax-loader-16.gif" data-bind="visible: processingAddress">
          </div>
 
          <div data-bind="if: !municipalitySupported()">
