Municipality maps completed for now.
Robot tests.
New Oskari map version.
Remove old dead optgroup template.
Remove version parameter from map server requests,
since it is an unnecessary hard-coded limitation.
More robust waiting animations.

--- a/resources/private/ui-components/municipality-maps/municipality-maps-layers-template.html
+++ b/resources/private/ui-components/municipality-maps/municipality-maps-layers-template.html
@@ -5,7 +5,7 @@
       <script type="text/x-jquery-tmpl" id="municipality-maps-layers-template">
         <div data-bind="if: serverLayers">
           <h3 data-bind="ltext: 'auth-admin.municipality-maps.layers'"></h3>
-          <table class="table table-striped">
+          <table class="table table-striped" data-test-id="layers-table">
             <thead>
               <tr>
                 <th data-bind="ltext: 'auth-admin.municipality-maps.layername'"></th>
@@ -21,7 +21,9 @@
                 <!-- /ko -->
                 <!-- ko ifnot: fixed -->
                 <td class="munimaps--wide">
-                  <input type="text" data-bind="value: name">
+                  <input type="text"
+                         data-bind="value: name,
+                                    attr: {'data-test-id': 'layer' + $index() + '-input'}">
                 </td>
                 <!-- /ko -->
                 <td class="munimaps--wide">
@@ -30,23 +32,30 @@
                                      optionsText: 'title',
                                      optionsValue: 'name',
                                      optionsCaption: loc( 'choose'),
-                                     valueAllowUnset: true">
+                                     valueAllowUnset: true,
+                                     attr: {'data-test-id': 'layer' + $index() + '-select'}">
                   </select>
                 </td>
                 <td class="munimaps--check">
-                  <input type="checkbox" data-bind="checked: preview ">
+                  <input type="checkbox"
+                         data-bind="checked: preview,
+                                    attr: {'data-test-id': 'layer' + $index() + '-check'}">
                 </td>
                 <td class="munimaps--action">
-                  <a href="#" data-bind="ifnot: fixed">
-                    <span data-bind="text: '[' + loc( 'remove' ) + ']',
-                                     click: $parent.removeLayer"></span>
+                  <a href="#"
+                     data-bind="ifnot: fixed,
+                                click: $parent.removeLayer,
+                                attr: {'data-test-id': 'layer' + $index() + '-remove'}">
+                    <span data-bind="text: '[' + loc( 'remove' ) + ']'">
+                    </span>
                   </a>
                 </td>
               </tr>
             </tbody>
           </table>
           <button class="positive"
-                  data-bind="click: addLayer">
+                  data-bind="click: addLayer"
+                  data-test-id="layers-add">
             <i class="lupicon-circle-plus"></i>
             <span data-bind="ltext: 'auth-admin.municipality-maps.add'"></span>
           </button>
