--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1135,14 +1135,14 @@
                                 <label class="form-label tip" data-bind="ltext: 'add-statement-giver-maaraaika'" for="add-statement-giver-maaraaika"></label>
                                 <input type="text" class="form-input" data-bind="datepicker: maaraaika" id="add-statement-giver-maaraaika"></input>
 
-                                <button data-bind="click: $root.requestForStatementModel.toggleInviteSection"
+                                <button data-bind="click: toggleInviteSection"
                                         class="neutral modal"
                                         data-test-id="cancel-add-statement-giver">
                                     <i class="lupicon-remove"></i>
                                     <span data-bind="ltext: 'cancel'"></span>
                                 </button>
 
-                                <button data-bind="click: $root.requestForStatementModel.send, disable: disabled"
+                                <button data-bind="click: send, disable: disabled"
                                         class="positive modal"
                                         data-test-id="add-statement-giver">
                                   <i class="lupicon-circle-check"></i>
