show "manual statement givers" in the table

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1111,7 +1111,7 @@
                                 <p id="choose-statement-givers-title" data-bind="ltext: 'application-choose-statement-givers'"></p>
 
                                 <table class="table table-striped" data-test-id="table-application-statements-givers">
-                                    <tbody data-bind="foreach: data()">
+                                    <tbody data-bind="foreach: combinedData()">
                                         <tr class="statement-row">
                                             <td>
                                                 <input class="form-input" type="checkbox" data-test-id="check-statement-giver"
