fetch new comments until there are no more

--- a/resources/private/ui-components/bulletin/bulletin-tab/bulletin-comments/bulletin-comments-template.html
+++ b/resources/private/ui-components/bulletin/bulletin-tab/bulletin-comments/bulletin-comments-template.html
@@ -38,4 +38,5 @@
     </div>
   </div>
   <!-- /ko -->
+  <div data-bind="infiniteScroll: commentsLeft() > 0, loadFn: fetchComments"></div>
 </script>
