--- a/resources/private/ui-components/bulletin/bulletin-tab/bulletin-tab-template.html
+++ b/resources/private/ui-components/bulletin/bulletin-tab/bulletin-tab-template.html
@@ -21,6 +21,7 @@
   <div class="bulletin-component" data-bind="component: {name: 'bulletin-comments',
                                                          params: {showVersionComments: showVersionComments,
                                                                   bulletin: bulletin,
-                                                                  comments: comments}}"></div>
+                                                                  comments: comments,
+                                                                  commentsLeft: commentsLeft}}"></div>
   <!-- /ko -->
 </script>
