--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1124,13 +1124,19 @@
                                                                          'disabled': isDisabled}" />
                                             </td>
                                             <td>
-                                              <input class="form-input" type="text" data-bind="textInput: text, attr: {'data-test-id': 'add-statement-giver-text-' + $index()}"></input>
+                                              <input class="form-input" type="text" data-bind="textInput: text,
+                                                                                               attr: {'data-test-id': 'add-statement-giver-text-' + $index(),
+                                                                                                      'readonly': readonly}"></input>
                                             </td>
                                             <td>
-                                              <input class="form-input" type="text" data-bind="textInput: name, attr: {'data-test-id': 'add-statement-giver-name-' + $index()}"></input>
+                                              <input class="form-input" type="text" data-bind="textInput: name,
+                                                                                               attr: {'data-test-id': 'add-statement-giver-name-' + $index(),
+                                                                                                      'readonly': readonly}"></input>
                                             </td>
                                             <td>
-                                            <input class="form-input" type="text" data-bind="textInput: email, attr: {'data-test-id': 'add-statement-giver-email-' + $index()}"></input>
+                                            <input class="form-input" type="text" data-bind="textInput: email,
+                                                                                             attr: {'data-test-id': 'add-statement-giver-email-' + $index(),
+                                                                                                    'readonly': readonly}"></input>
                                             </td>
                                         </tr>
                                     </tbody>
