--- a/resources/private/ui-components/bulletin/bulletin-tab/bulletin-tab-template.html
+++ b/resources/private/ui-components/bulletin/bulletin-tab/bulletin-tab-template.html
@@ -22,6 +22,7 @@
                                                          params: {showVersionComments: showVersionComments,
                                                                   bulletin: bulletin,
                                                                   comments: comments,
-                                                                  commentsLeft: commentsLeft}}"></div>
+                                                                  commentsLeft: commentsLeft,
+                                                                  totalComments: totalComments}}"></div>
   <!-- /ko -->
 </script>
