--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1117,10 +1117,9 @@
 <!--                                            TODO: kokeile: checkedValue: $data, -->
                                                 <input id="add-statement-giver-checkbox"
                                                        class="form-input" type="checkbox"
-                                                       data-bind="value: id,
-                                                                  checked: $root.requestForStatementModel.personIds,
-                                                                  attr: {'id': id,
-                                                                         'data-test-id': 'check-statement-giver-' + $index(),
+                                                       data-bind="checkedValue: $data,
+                                                                  checked: $root.requestForStatementModel.selectedPersons,
+                                                                  attr: {'data-test-id': 'check-statement-giver-' + $index(),
                                                                          'disabled': isDisabled}" />
                                             </td>
                                             <td>
