--- a/resources/private/create/create.html
+++ b/resources/private/create/create.html
@@ -81,7 +81,7 @@
     <div class="tree-last">
 
       <div data-bind="text: loc('operations.selected') + ' ' + loc(['operations', operation()])"></div>
-      <div data-bind="html: loc(['operations', operation(), 'desc'])"></div>
+      <div class="operation-description" data-bind="html: loc(['operations', operation(), 'desc'])"></div>
 
       <div class="organization-links" data-bind="visible: organizationLinks() && organizationLinks().length">
         <div data-bind="ltext: 'organization.links'"></div>
