render bulletin proclamation feedback period correctly

--- a/resources/private/bulletins/application-bulletins/application-bulletins-list/application-bulletins-list-template.html
+++ b/resources/private/bulletins/application-bulletins/application-bulletins-list/application-bulletins-list-template.html
@@ -22,7 +22,7 @@
             <td data-bind="ltext: $data.type"></td>
             <td data-bind="text: $data.applicant"></td>
             <td data-bind="dateTimeString: $data.date"></td>
-            <td data-bind="text: $data.feedbackPeriod"></td>
+            <td data-bind="dateTimeString: $data.proclamationEndsAt"></td>
           </tr>
         </tbody>
       </table>
