--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1072,112 +1072,13 @@
                     </div>
                     <!-- /ko -->
 
-                    <!-- Statement tab -->
+                    <!-- Statements tab -->
 
-                    <!-- ko if: selectedTabName() === 'statement' -->
+                    <!-- ko if: selectedTabName() === 'statement' && application.id() -->
                     <div id="application-statement-tab" class="tab-content">
-
-                        <div data-bind="with: application" class="application-statements">
-                            <h1 data-bind="ltext: 'application.statements'">Lausunnot</h1>
-                            <span data-bind="component: {
-                                             name: 'help-toggle',
-                                             params: {lhtml: 'help.' + permitType() + '.statementsDesc' }
-                                             }"></span>
-                            <div data-bind="template: {name: 'statements-template', data: {statements: $data.statements, localisationKeys: {missing: 'application.statement.missing'}}}"></div>
-                            <button data-bind="click: $root.requestForStatementModel.toggleInviteSection,
-                                               visible: $root.authorization.ok('request-for-statement') && !$root.requestForStatementModel.showInviteSection()"
-                                    class="positive modal"
-                                    data-test-id="add-statement">
-                              <i class="lupicon-circle-plus"></i>
-                              <span data-bind="ltext: 'application.statement.add'"></span>
-                            </button>
-
-                          <div data-bind="if: $root.requestForStatementModel.showInviteSection" id="invite-statement-givers-section">
-                            <div data-bind="with: $root.requestForStatementModel">
-
-                                <p id="choose-statement-givers-title" data-bind="ltext: 'application-choose-statement-givers'"></p>
-
-                                <table class="table table-striped" data-test-id="table-application-statements-givers">
-                                    <tbody data-bind="foreach: combinedData()">
-                                        <tr class="statement-row">
-                                            <td>
-<!--                                            TODO: kokeile: checkedValue: $data, -->
-                                                <input id="add-statement-giver-checkbox"
-                                                       class="form-input" type="checkbox"
-                                                       data-bind="checkedValue: $data,
-                                                                  checked: $root.requestForStatementModel.selectedPersons,
-                                                                  attr: {'data-test-id': 'check-statement-giver-' + $index(),
-                                                                         'disabled': isDisabled}" />
-                                            </td>
-                                            <td>
-                                              <input class="form-input" type="text" data-bind="textInput: text,
-                                                                                               attr: {'data-test-id': 'add-statement-giver-text-' + $index(),
-                                                                                                      'readonly': readonly}"></input>
-                                            </td>
-                                            <td>
-                                              <input class="form-input" type="text" data-bind="textInput: name,
-                                                                                               attr: {'data-test-id': 'add-statement-giver-name-' + $index(),
-                                                                                                      'readonly': readonly}"></input>
-                                            </td>
-                                            <td>
-                                            <input class="form-input" type="text" data-bind="textInput: email,
-                                                                                             attr: {'data-test-id': 'add-statement-giver-email-' + $index(),
-                                                                                                    'readonly': readonly}"></input>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-
-                                <button data-bind="click: addManualData,
-                                                   attr: {'disabled': addStatementGiversDisabled}"
-                                        class="positive modal"
-                                        data-test-id="add-manual-statement-giver">
-                                  <i class="lupicon-circle-plus"></i>
-                                  <span data-bind="ltext: 'application.statement.add-manual-statement-giver'"></span>
-                                </button>
-
-                                <br /><br />
-
-                                <label data-bind="ltext: 'application.invite-statement-giver-saateText'" for="invite-statement-giver-saateText" class="form-label form-label-text tip"></label>
-                                <textarea id="invite-statement-giver-saateText" rows=10 class="form-input textarea really-long high"
-                                          data-bind="textInput: saateText, attr: {placeholder: loc('application.invite-statement-giver-saateText-placeholder')}"></textarea>
-
-
-                                <label class="form-label tip" data-bind="ltext: 'add-statement-giver-maaraaika'" for="add-statement-giver-maaraaika"></label>
-                                <input type="text" class="form-input" data-bind="datepicker: maaraaika" id="add-statement-giver-maaraaika"></input>
-
-                                <button data-bind="click: toggleInviteSection"
-                                        class="neutral modal"
-                                        data-test-id="cancel-add-statement-giver">
-                                    <i class="lupicon-remove"></i>
-                                    <span data-bind="ltext: 'cancel'"></span>
-                                </button>
-
-                                <button data-bind="click: send, disable: disabled"
-                                        class="positive modal"
-                                        data-test-id="add-statement-giver">
-                                  <i class="lupicon-circle-check"></i>
-                                  <span data-bind="ltext: 'application.statement.add'"></span>
-                                </button>
-
-                              <img class="own-info-ajax-loader" data-bind="visible: submitting" style="display: none" src="/img/ajax-loader-12.gif" alt="..." width="12" height="12"/>
-
-                            </div>
-                          </div>
-
-                        </div>
-
-                        <div data-bind="with: application" class="application-neighbors">
-
-                            <h1 data-bind="lhtml: 'application.' + $root.application.permitType() + '.neighbors'">Naapurit</h1>
-                            <span data-bind="component: {
-                                             name: 'help-toggle',
-                                             params: {lhtml: 'help.' + $root.application.permitType() + '.neighborsDesc'}
-                                             }"></span>
-                            <div data-bind="template: {name: 'neighbors-template', data: {neighbors: $data.neighbors, localisationKeys: {missing: 'neighbors.missing'}}}"></div>
-
-                            <button data-bind="click: $root.neighbor.manage, ltext: 'neighbors.manage', visible: $root.authorization.ok('neighbor-add')" class="btn btn-primary modal" data-test-id="manage-neighbors"></button>
-                        </div>
+                        <div data-bind="component: {name: 'statements-tab',
+                                                    params: {application: application,
+                                                             authModel: $root.authorization}}"></div>
                     </div>
                     <!-- /ko -->
 
@@ -1191,7 +1092,7 @@
 
                                 <!-- /ko -->
                                 <div data-bind="component: {name: 'archival-summary',
-                                            params: {application: application}}"></div>
+                                                params: {application: application}}"></div>
                             </div>
                         </div>
                     </div>
@@ -1230,7 +1131,9 @@
                                     <tr class="statement-row">
                                         <td>
                                             <span data-bind="if: status() || $root.authorization.ok('should-see-unsubmitted-statements')">
-                                                <a href="#" data-bind="text: person.text, click: $root.requestForStatementModel.openStatement, attr: {'data-test-id' : 'open-statement-' + $index()}"></a>
+                                                <a href="#" data-bind="text: person.text,
+                                                                       click: $root.statementActions.openStatement,
+                                                                       attr: {'data-test-id' : 'open-statement-' + $index()}"></a>
                                             </span>
                                             <span data-bind="ifnot: status() || $root.authorization.ok('should-see-unsubmitted-statements')">
                                                 <span data-bind="text: person.text, attr: {'data-test-id' : 'open-statement-' + $index()}"></span>
