--- a/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
+++ b/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
@@ -40,7 +40,7 @@
                                    data-bind="checkedValue: $data,
                                               checked: $component.selectedPersons,
                                               attr: {'data-test-id': 'check-statement-giver-' + $index(),
-                                                     'disabled': isDisabled}" />
+                                                     'disabled': errors().length != 0}" />
                         </td>
                         <td>
                           <input class="form-input" type="text" data-bind="textInput: text,
