--- a/resources/private/statement/statement.html
+++ b/resources/private/statement/statement.html
@@ -13,7 +13,10 @@
         </span>
       </h1>
       <button class="attachment-delete inline-block"
-              data-bind="ltext: 'statement.delete', click: $root.statementModel.openDeleteDialog, visible: $root.authorization.ok('delete-statement'), enable: $root.authorization.ok('delete-statement')"
+              data-bind="ltext: 'statement.delete',
+                         click: $root.statementModel.openDeleteDialog,
+                         visible: canDeleteStatement(),
+                         enable: canDeleteStatement()"
               data-test-id="delete-statement">Poista lausunto</button>
       <div data-bind="with: application">
         <a class="btn secondary inline-block"
