--- a/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
+++ b/resources/private/ui-components/statement/statement-tab/statements-tab-template.html
@@ -31,15 +31,16 @@
 <!--  TODO: checkbox komponentti ei tue checkedValue:ta... -->
 <!--                            <div data-bind="component: {name: 'checkbox-field', -->
 <!--                                                        params: {id: 'add-statement-giver-checkbox-' + $index(), -->
-<!--                                                                 checked: $component.selectedPersons, -->
+<!--                                                                 checked: $component.selectedPerson, -->
 <!--                                                                 checkedValue: $data, -->
 <!--                                                                 'data-test-id': 'check-statement-giver-' + $index(), -->
-<!--                                                                 'disabled': isDisabled -->
+<!--                                                                 'disabled': errors().length != 0 -->
 <!--                                                                 }}"></div> -->
-                            <input class="form-input" type="checkbox"
+                            <input class="form-input" type="radio"
                                    data-bind="checkedValue: $data,
-                                              checked: $component.selectedPersons,
+                                              checked: $component.selectedPerson,
                                               attr: {'data-test-id': 'check-statement-giver-' + $index(),
+                                                     'name': 'statementGiverSelectedPerson',
                                                      'disabled': errors().length != 0}" />
                         </td>
                         <td>
