--- a/resources/private/statement/statement.html
+++ b/resources/private/statement/statement.html
@@ -93,8 +93,8 @@
                 </td>
                 <td><a data-bind="ltext: 'remove',
                                   click: _.partial($root.attachmentsModel.deleteAttachment, $parent.id),
-                                  visible: $root.attachmentsModel.canDeleteAttachment($parent) && $root.authorization.ok('give-statement'),
-                                  enable: $root.attachmentsModel.canDeleteAttachment($parent) && $root.authorization.ok('give-statement')" ></a></td>
+                                  visible: $root.attachmentsModel.canDeleteAttachment($parent),
+                                  enable: $root.attachmentsModel.canDeleteAttachment($parent)"></a></td>
               </tr>
             </tbody>
           </table>
@@ -107,8 +107,8 @@
         <button
           class="btn"
           data-bind="ltext: 'application.attachmentsAdd',
-                     visible: canAddAttachment() && $root.authorization.ok('give-statement'),
-                     enabled: canAddAttachment() && $root.authorization.ok('give-statement'),
+                     visible: canAddAttachment(),
+                     enabled: canAddAttachment(),
                      click: newAttachment"
           data-test-id="add-statement-attachment">
         </button>
