remoe form-input class to fix styling of select element

--- a/resources/private/attachment/attachment.html
+++ b/resources/private/attachment/attachment.html
@@ -177,7 +177,7 @@
                     <h3 class="left" data-bind="ltext: 'attachment.visibility'"></h3>
                     <span data-bind="component: {name: 'help-toggle',
                                                  params: {lhtml: 'help.attachment.visibility'}}"></span>
-                    <select data-test-id="attachment-visibility" class="form-input"
+                    <select data-test-id="attachment-visibility"
                             data-bind="options: attachmentVisibilities,
                                        optionsText: function(i) { return loc('attachment.visibility.' + i)},
                                        value: visibility,
