show verdict tab only on verdictGiven state

--- a/resources/private/bulletins/application-bulletin/application-bulletin-template.html
+++ b/resources/private/bulletins/application-bulletin/application-bulletin-template.html
@@ -90,9 +90,11 @@
               <li data-bind="css: {'active': selectedTab() === 'attachments'}">
                   <a data-bind="click: _.partial(openTab, 'attachments')" href="#" data-test-id="bulletin-open-attachments-tab" class="link-btn-julkipano">
                       <span data-bind="ltext: 'application.tabAttachments'"></span></a></li>
+              <!-- ko if: showVerdicts -->
               <li data-bind="css: {'active': selectedTab() === 'verdicts'}">
                   <a data-bind="click: _.partial(openTab, 'verdicts')" href="#" data-test-id="bulletin-open-verdicts-tab" class="link-btn-julkipano">
                       <span data-bind="ltext: 'application.tabVerdict'"></span></a></li>
+              <!-- /ko -->
 
             </ul>
           </div>
