show verdicts on tab

--- a/resources/private/bulletins/application-bulletin/tabs/verdicts/bulletin-verdicts-tab-template.html
+++ b/resources/private/bulletins/application-bulletin/tabs/verdicts/bulletin-verdicts-tab-template.html
@@ -6,7 +6,7 @@
         <h3 class="left" data-bind="ltext: 'application.tabVerdict'"></h3>
         <span data-bind="component: {name: 'help-toggle',
                                      params: {lhtml: 'help.bulletin.verdicts'}}"></span>
-        FOO
+        <div data-bind="template: {name: 'verdicts-template'}"></div>
     </script>
   </section>
 </body>
