--- a/resources/private/ui-components/docgen/construction-waste-report/construction-waste-report-template.html
+++ b/resources/private/ui-components/docgen/construction-waste-report/construction-waste-report-template.html
@@ -30,7 +30,8 @@
                                                     path: $parent.path.concat(name),
                                                     i18npath: i18npath,
                                                     applicationId: applicationId,
-                                                    documentId: documentId }}">
+                                                    documentId: documentId,
+                                                    authModel: authModel }}">
                 </span>
               </td>
               <!-- /ko -->
@@ -48,17 +49,17 @@
       <div class="button-group" data-bind="visible: updatable()">
         <span data-bind="saveIndicator: indicator"></span>
         <span data-bind="component: { name: 'docgen-button',
-                                     params: { id: groupId + '-append-button', 
-                                               className: 'positive', 
-                                               icon: 'lupicon-circle-plus', 
-                                               label: appendLabel, 
+                                     params: { id: groupId + '-append-button',
+                                               className: 'positive',
+                                               icon: 'lupicon-circle-plus',
+                                               label: appendLabel,
                                                clickFn: addGroup }}">
         </span>
         <span data-bind="component: { name: 'docgen-button',
-                                     params: { id: groupId + '-copy-button', 
-                                               className: 'secondary', 
-                                               icon: 'lupicon-circle-plus', 
-                                               label: copyLabel, 
+                                     params: { id: groupId + '-copy-button',
+                                               className: 'secondary',
+                                               icon: 'lupicon-circle-plus',
+                                               label: copyLabel,
                                                clickFn: duplicateLastGroup }}">
         </span>
       </div>
