pass separate parameters as observables

--- a/resources/private/bulletins/application-bulletin/tabs/attachments/bulletin-attachments-tab-template.html
+++ b/resources/private/bulletins/application-bulletin/tabs/attachments/bulletin-attachments-tab-template.html
@@ -6,11 +6,11 @@
         <h3 class="left" data-bind="ltext: 'application.tabAttachments'"></h3>
         <span data-bind="component: {name: 'help-toggle',
                                      params: {lhtml: 'help.bulletin.attachments'}}"></span>
-        <!-- ko if: attachments.length > 0 -->
+        <!-- ko if: attachments().length > 0 -->
         <div data-bind="template: {name: 'bulletin-attachments-table-template',
                                    data: attachments}"></div>
         <!-- /ko -->
-        <!-- ko if: attachments.length == 0 -->
+        <!-- ko if: attachments().length == 0 -->
         <i data-bind="ltext: 'application.attachmentsEmpty'" data-test-id="bulletin-attachments-empty"></i>
         <!-- /ko -->
     </script>
