--- a/resources/private/bulletins/application-bulletin/tabs/verdicts/verdicts-template.html
+++ b/resources/private/bulletins/application-bulletin/tabs/verdicts/verdicts-template.html
@@ -42,6 +42,10 @@
                                       <label data-bind="ltext: 'verdict.anto'"></label>
                                       <span class="value" data-bind="dateString: paivamaarat.anto"></span>
                                   </div>
+                                  <div data-bind="if: $parents[1].officialAt" class="key-value-pair">
+                                      <label data-bind="ltext: 'verdict.lainvoimainen'"></label>
+                                      <span class="value" data-bind="dateString: $parents[1].officialAt"></span>
+                                  </div>
                                   <div data-bind="if: paivamaarat.paatosdokumentinPvm" class="key-value-pair">
                                       <label data-bind="ltext: 'verdict.paatosdokumentinPvm'"></label>
                                       <span class="value" data-bind="dateString: paivamaarat.paatosdokumentinPvm"></span>
