hide print buttons

--- a/resources/private/bulletins/application-bulletin/application-bulletin-template.html
+++ b/resources/private/bulletins/application-bulletin/application-bulletin-template.html
@@ -66,7 +66,7 @@
               </button>
               <!-- /ko -->
 
-              <button class="function julkipano"
+<!--               <button class="function julkipano"
                       data-bind=""
                       data-test-id="print-bulletin">
                   <i class="lupicon-print"></i>
@@ -77,7 +77,7 @@
                       data-test-id="download-bulletin-attachments">
                   <i class="lupicon-print"></i>
                   <span data-bind="ltext: 'bulletin.attachments.download'"></span>
-              </button>
+              </button> -->
             </div>
           </div>
 
